--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank">Amazon Webscraper in Python</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank" class="image fit"><img src="images/amazon.jpg" alt="" /></a>
-									<p>Scraping the Name and Price of a Product on Amazon every 24 Hours and saving them in a File.</p>
+									<p>Scraping the Name and Price of a Product on Amazon every 24 Hours and saving them in a File</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank" class="button">View Project</a></li>
 									</ul>
