--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Data_Cleaning_Project.sql" target="_blank">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>Cleaning Housing Data with SQL in Microsoft SQL Server</p>
+									<p>Cleaning Housing Data with SQL in Microsoft SQL Server.</p>
 								</header>
 								<a href="https://github.com/Kevin-K42/Projects/blob/main/Data_Cleaning_Project.sql" target="_blank" class="image main"><img src="images/housing.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -67,7 +67,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank">Data Exploration in SQL</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in Microsoft SQL Server</p>
+									<p>Data Exploration of Covid 19 Dataset in Microsoft SQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -77,7 +77,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank">Amazon Webscraper in Python</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank" class="image fit"><img src="images/amazon.jpg" alt="" /></a>
-									<p>Scraping the Name and Price of a Product on Amazon every 24 Hours and saving them in a File</p>
+									<p>Scraping the Name and Price of a Product on Amazon every 24 Hours and saving them in a File.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/Amazon_Webscraper.py" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank">Correlation Project in Python</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank" class="image fit"><img src="images/cinema.jpg" alt="" /></a>
-									<p>Searching for Correlations in the Features of Movies and Visualizing them with a Heatmap</p>
+									<p>Searching for Correlations in the Features of Movies and Visualizing them with a Heatmap.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -97,7 +97,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank">Tableau Project</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Visualization of public Airbnb Data of Seattle in Tableau</p>
+									<p>Visualization of public Airbnb Data of Seattle in Tableau.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -107,7 +107,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx">Excel Project</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx" class="image fit"><img src="images/excel.jpg" alt="" /></a>
-									<p>Creating a Dashboard in Excel to visualize Customer Characteristics based on public Bike Sales Data</p>
+									<p>Creating a Dashboard in Excel to visualize Customer Characteristics based on public Bike Sales Data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx" class="button">Download Project</a></li>
 									</ul>
@@ -117,7 +117,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix">Power BI Project</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
-									<p>Creating an interactive Visualization based on Answers by Data Professionals in a Survey regarding Aspects of a Career in the Data Field </p>
+									<p>Creating an interactive Visualization based on Answers by Data Professionals in a Survey regarding Aspects of a Career in the Data Field.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix" class="button">Download Project</a></li>
 									</ul>
