--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Import scripts -->
+		<script src="email.js"></script>
 	</head>
 	<body class="is-preload">
 
@@ -52,7 +54,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Data_Cleaning_Project.sql" target="_blank">Data Cleaning in SQL<br />
 									</a></h2>
-									<p>Cleaning Housing Data with SQL in Microsoft SQL Server.</p>
+									<p>Cleaning Housing Data with SQL in Microsoft SQL Server</p>
 								</header>
 								<a href="https://github.com/Kevin-K42/Projects/blob/main/Data_Cleaning_Project.sql" target="_blank" class="image main"><img src="images/housing.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -67,7 +69,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank">Data Exploration in SQL</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in Microsoft SQL Server.</p>
+									<p>Data Exploration of Covid 19 Dataset in Microsoft SQL Server</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/COVID_Project.sql" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -87,7 +89,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank">Correlation Project in Python</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank" class="image fit"><img src="images/cinema.jpg" alt="" /></a>
-									<p>Searching for Correlations in the Features of Movies and Visualizing them with a Heatmap.</p>
+									<p>Searching for Correlations in the Features of Movies and Visualizing them with a Heatmap</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/blob/main/Python_Correlation_Project/main.py" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -97,7 +99,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank">Tableau Project</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Visualization of public Airbnb Data of Seattle in Tableau.</p>
+									<p>Visualization of public Airbnb Data of Seattle in Tableau</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/kevin.kirchner4280/viz/AirbnbProject_16978851805940/Dashboard1" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -107,7 +109,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx">Excel Project</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx" class="image fit"><img src="images/excel.jpg" alt="" /></a>
-									<p>Creating a Dashboard in Excel to visualize Customer Characteristics based on public Bike Sales Data.</p>
+									<p>Creating a Dashboard in Excel to visualize Customer Characteristics based on public Bike Sales Data</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/raw/main/Excel_Project.xlsx" class="button">Download Project</a></li>
 									</ul>
@@ -117,7 +119,7 @@
 										<h2><a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix">Power BI Project</a></h2>
 									</header>
 									<a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix" class="image fit"><img src="images/powerbi.jpg" alt="" /></a>
-									<p>Creating an interactive Visualization based on Answers by Data Professionals in a Survey regarding Aspects of a Career in the Data Field.</p>
+									<p>Creating an interactive Visualization based on Answers by Data Professionals in a Survey regarding Aspects of a Career in the Data Field </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Kevin-K42/Projects/raw/main/Datacareer_Survey_Project.pbix" class="button">Download Project</a></li>
 									</ul>
@@ -126,7 +128,9 @@
 
 						<section class="split contact">
 								<h3>Email</h3>
-								<p>kevin.kirchner98@gmail.com</p>
+								<a id="contact" href="">
+									<i class="fa fa-envelope"></i>
+								</a>
 							</section>
 							<section>
 								<h3>Social</h3>
