--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@
 
 						<section class="split contact">
 								<h3>Email</h3>
-								<a id="contact" href="">
-									<i class="fa fa-envelope"></i>
-								</a>
+								<i class="fa fa-envelope"></i>
+								<a id="contact" href=""></a>
 							</section>
 							<section>
 								<h3>Social</h3>
